Fix: Added Bootstrap JS links as navbar was not working and made burger icon visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,15 @@
 .navbar h1, h4 {
     color: #fff;
 }
+
+/*--------------------------------------------Navbar*/
+
+@media (min-width: 768px) {
+.navbar-brand.abs
+    {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        text-align: center;
+    }
+}
